tests/negative/gold/indent3_test.gold
tests/negative/indent3_test.toit:9:5: error: All expressions in a sequence must be indented the same way
    "bad indent"
    ^~~~~~~~~~~~
Compilation failed.
